# ChaosSabers-Armour-Set-Search

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.txt  LICENSE  LICENSE-3RD-PARTY  PULL_REQUEST_TEMPLATE.md  README  README.md  Troubleshooting.txt  _clang-format  run-clang.bat
.github/ISSUE_TEMPLATE/: bug_report.md
code/: CMakeLists.txt
code/include/: ArmourSetSearch.hpp  Dictionary.hpp  Options - Copy.hpp  Options.hpp
code/include/gear/: Armour.hpp  ArmourSet.hpp  Armoury.hpp  Cell.hpp  CellList.hpp  Elements.hpp  Gear.hpp  Rarity.hpp  Skill.hpp  SkillInfo.hpp  SkillList.hpp  SkillType.hpp  Weapon.hpp
code/include/ui/: About.hpp  AdvancedSearch.hpp  ArmourSetView.hpp  License.hpp  SkillSelector.hpp  mainwindow.hpp
code/include/util/: files.hpp  json.hpp  string.hpp
code/lib/include/: ArmourSetSearch.hpp  Dictionary.hpp  Options.hpp
code/lib/include/gear/: ArmourSet.hpp  Armoury.hpp  Cell.hpp  CellList.hpp  Elements.hpp  Gear.hpp  SkillInfo.hpp  Weapon.hpp
code/lib/include/util/: GreyCodeGenerator.hpp
code/lib/src/: Dictionary.cpp  Options.cpp
code/lib/src/gear/: ArmourSet.cpp  Armoury.cpp  CellList.cpp  Gear.cpp  Skill.cpp  SkillInfo.cpp  Weapon.cpp
code/lib/src/util/: GreyCodeGenerator.cpp  files.cpp  string.cpp
code/src/: ArmourSetSearch.cpp  Config.cpp  Dictionary.cpp  Options.cpp  main.cpp
code/src/gear/: Armour.cpp  ArmourSet.cpp  Armoury.cpp  Cell.cpp  CellList.cpp  Gear.cpp  Skill.cpp  SkillInfo.cpp  SkillList.cpp  SkillType.cpp  Weapon.cpp
code/src/ui/: About.cpp  AdvancedSearch.cpp  ArmourSetView.cpp  CellWindow.cpp  License.cpp  SkillSelector.cpp  Translation.cpp  mainwindow - Copy.cpp  mainwindow.cpp
code/src/util/: json.cpp  string.cpp
code/ui/: AdvancedSearch.ui  ArmourSetView.ui  CellWindow.ui  mainwindow.ui
code/ui/assets/: Resource.qrc
code/ui/assets/icons/cells/: Icons-256x256.pdn
code/ui/include/: FileDownloader.hpp
code/ui/include/ui/: ArmourSetView.hpp  CellDisplay.hpp  CellWindow.hpp  DetailedArmourSetView.hpp  ElementalLabel.hpp  GearView.hpp  LoadoutEntry.hpp  Loadouts.hpp  SkillLabel.hpp  SkillSelector.hpp  Translation.hpp  mainwindow.hpp
code/ui/include/util/: Export.hpp  Spacer.hpp
code/ui/src/: FileDownloader.cpp  main.cpp
code/ui/src/ui/: About.cpp  AdvancedSearch.cpp  ArmourSetView.cpp  CellDisplay.cpp  CellWindow.cpp  DetailedArmourSetView.cpp  ElementalLabel.cpp  GearView.cpp  License.cpp  LoadoutEntry.cpp  Loadouts.cpp  SkillLabel.cpp  SkillSelector.cpp  mainwindow.cpp
code/ui/src/util/: Export.cpp  Spacer.cpp  Translation.cpp
code/ui/ui/: About.ui  CellDisplay.ui  DetailedArmourSetView.ui  ElementalLabel.ui  GearView.ui  License.ui  Loadouts.ui  mainwindow.ui
data/: Arms.txt  Axe.txt  Chainblades.txt  Hammer.txt  Heads.txt  Legs.txt  Pike.txt  Skills.txt  Swords.txt  Torsos.txt
language/: Loadouts.txt  arms.txt  axe.txt  chainblades.txt  experimental.txt  hammer.txt  heads.txt  languages.json  legs.txt  pike.txt  skills.txt  swords.txt  torsos.txt  ui.txt
